# nsa

./: .context.yaml  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .treeignore  .zipignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  VERSION  commit_checklist.txt  compose.yaml  package-lock.json  prompt_registry.yaml  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  run_sample_chunker.py  setup.py  tag-and-release.sh
.windsurf/rules/: stark-protocol.md
config/: chunker_config.yaml  nasa_simulation_prompt_assistant.json  nasa_simulation_prompt_assistant.yaml
docs/: prompt_template.md
formats/: nasa_simulation_prompt_assistant.md
memory/prompts/: session_2025-05-04.md  session_2025-05-05-0200.md
next-prompts/: README.md
profiles/: session_bootstrapper.md
profiles/ironDecathalon/: README.md
profiles/prompt/: nasa_simulation_prompt_assistant.json  nasa_simulation_prompt_assistant.md  nasa_simulation_prompt_assistant.yaml
profiles/simulation/: README.md  assistant_prompt_combined.md  simulation_assistant.md  simulation_assistant.yaml  simulation_extension_layer.md  simulation_extension_layer.yml
prompts/deepdive/: prompt_engineering_report.md
prompts/overview/: prompt_patterns_summary.md
prompts/toolbuild/: trick_model_scaffold.md
real_chunks/: chunks.jsonl  chunks_manifest.md
real_chunks/concept/: Checkpoints_00.md  Command-Line-Arguments_00.md  Data-Products_00.md  (+83 more)
rl/: .gitignore  .treeignore  README.md  inspect_rllib_config.py  pyproject.toml  requirements-test.txt  requirements.txt  test_rllib_instantiation.py
rl/board_game_lib/: pyproject.toml
rl/board_game_lib/rl_project/: config.py
rl/board_game_lib/rl_project/environments/: board_game_env.py  board_game_env.py,cover  board_game_factory.py
rl/board_game_lib/rl_project/interfaces/: ienvironment_factory.py  ilogger.py  irunner.py
rl/board_game_lib/rl_project/utils/: callback.py  config.py  logger.py
rl/board_game_lib/tests/: test_board_game_edge_cases.py  test_board_game_env.py  test_board_game_features.py
rl/sb3_app/: README.md  inspect_agent.py  pyproject.toml
rl/sb3_app/configs/: baseline.yaml  ideal_2048steps_config.yaml  ideal_5epochs_8192steos_configs.yaml  ideal_5epochs_configs.yaml  ideal_8192steps_config.yaml  ideal_sb3_board_game_config.yaml  sb3_board_game_config.yaml
rl/sb3_app/configs/education/: aggressive.yaml  cautious.yaml  einstein.yaml  farsighted.yaml  frequent_stops.yaml  genius.yaml  high_intensity.yaml  infrequent_stops.yaml  low_intensity.yaml  no_fear.yaml  point_hoarder.yaml  sb3_board_game_config.yaml  short-sighted.yaml  speed_runner.yaml  uninspired.yaml
rl/sb3_app/configs/education_bak/: aggressive.yaml  cautious.yaml  einstein.yaml  farsighted.yaml  frequent_stops.yaml  genius.yaml  high_intensity.yaml  infrequent_stops.yaml  low_intensity.yaml  no_fear.yaml  point_hoarder.yaml  sb3_updated_baseline.yaml  short-sighted.yaml  speed_runner.yaml  uninspired.yaml
rl/sb3_app/logs/sb3_tensorboard/Stark-RL-Base/: final_model_vecnormalize.pkl
rl/sb3_app/logs/sb3_tensorboard/Stark-RL-Base/PPO_1/: events.out.tfevents.1751414905.Daryl.31302.0
rl/sb3_app/logs/sb3_tensorboard/Stark-RL-Base/PPO_2/: events.out.tfevents.1751415799.Daryl.31721.0
rl/sb3_app/logs/sb3_tensorboard/Stark-RL-Base/PPO_3/: events.out.tfevents.1751421499.Daryl.32037.0
rl/sb3_app/logs/sb3_tensorboard/Stark-RL-Base/PPO_4/: events.out.tfevents.1751422852.Daryl.32269.0
rl/sb3_app/logs/sb3_tensorboard/Stark-RL-Base/PPO_5/: events.out.tfevents.1751423583.Daryl.32562.0
rl/sb3_app/logs/sb3_tensorboard/Stark-RL-Base/PPO_6/: events.out.tfevents.1751425021.Daryl.33076.0
rl/sb3_app/logs/sb3_tensorboard/Stark-RL-Base/PPO_7/: events.out.tfevents.1751453184.Daryl.33413.0
rl/sb3_app/logs/sb3_tensorboard/Stark-RL-Base/PPO_8/: events.out.tfevents.1751460965.Daryl.35437.0
rl/sb3_app/sb3_app/trainers/: run_sb3.py  sb3_runner.py
rl/sb3_app/tools/: config_gui.py  live_plotter.py  run_suite.py  visualize_policy.py
sample_docs/: config.yaml
schemas/: assistant_profile.schema.v1.0.0.json
scripts/: bootstrap.sh  make_core_howto.sh  scaffold_prompts.sh  setup_node_env.sh  test_tools.sh  zip_chunker_lib.sh
tests/: test_chunker_cli.py  test_chunker_config.py  test_chunker_core.py  test_chunker_lib.py  test_chunker_manifest.py  test_chunker_splitter.py  test_chunker_utils.py  test_cli.py  test_core.py  test_embedder.py  test_embedding.py  test_embedding_cli.py  test_faiss_vector_store.py  test_integration_chunker.py  test_retry_utils.py  test_vectorstore_cli.py
tools/: __init__.py  assistant_maker.py  build_full_docs.py  build_pipeline_e2e.py  build_trick_chunks.py  chunker_cli.py  concat_md.py  convert_prompt_profile.py  lint_prompts.py  load_prompt.py  make_core_howto.py  monitor.py  trick_proc_watch.py  validate_prompt_files.py  vectorstore_cli.py  zip_project.py
(+368 files in other folders)
