[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nasa-simulation-agents"
version = "0.1.0"
description = "NASA Simulation Agents - AI-powered simulation tools for space mission planning and analysis"
authors = [
    { name = "NASA Simulation Team", email = "simulation@nasa.example.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pyyaml>=5.4.1",
    "tqdm>=4.62.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "requests>=2.26.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.0",
    "mypy>=0.910",
    "flake8>=4.0.0",
    "pytest>=6.2.5",
    "pytest-cov>=2.12.0",
    "pre-commit>=2.15.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=./ --cov-report=term-missing"

[tool.coverage.run]
source = ["tools"]
omit = ["**/test_*.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
# Enable pycodestyle (`E` and `W`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I"]
# Exclude a variety of commonly ignored directories.
ignore = []
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when they are prefixed with an underscore.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
line-length = 88

# Allow autofix for all enabled rules (when `--fix`) is provided.
[per_file_ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**" = ["F403", "F405", "F841"]
# Allow non-abstract empty methods in abstract base classes
"**/__init__.py" = ["F401"]
