# This section tells build tools like pip how to build your project.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# This section contains the core metadata for your library.
[project]
name = "board_game_env_lib"
version = "0.1.0"
description = "A shared Gymnasium environment for the board game simulation."
requires-python = "~=3.11"
dependencies = [
    "gymnasium",
    "numpy < 2.0",  # Pinning to < 2.0 for compatibility with RLlib 2.9.3
    "pygame"
]

# This tells setuptools to automatically find your 'rl_project' package
# within this directory, so you don't have to list it manually.
[tool.setuptools.packages.find]
where = ["."]
